# Clustr

./: .env.example  .gitignore  Dockerfile  OPEN_ITEMS.md  PRIVACY.md  README.md  TERMS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  ts-ci.yml
clustr-ts/: .env.example  .gitignore  Dockerfile  FOLLOWUPS.md  README.md  SELF_HOST.md  SELF_HOST_LXC.md  SMOKE_TEST.md  docker-compose.yml  manifest.json  package-lock.json  package.json  tsconfig.json
clustr-ts/scripts/: pack.mjs
clustr-ts/src/: backupHints.ts  branding.ts  config.ts  endpoints.ts  exec.ts  http.ts  index.ts  multihost.ts  oauth.ts  prompts.ts  proxmox.ts  safe.ts  setup.ts  version.ts
clustr-ts/src/tools/read/: apt.ts  backupJobs.ts  backups.ts  cluster.ts  containers.ts  endpoints.ts  metrics.ts  network.ts  nodes.ts  pools.ts  review.ts  storage.ts  storageContent.ts  tasks.ts  updates.ts  (+1 more)
clustr-ts/tests/: backupHints.test.mjs  backups.test.mjs  downloadName.test.mjs  endpointValidation.test.mjs  endpoints.test.mjs  exec.test.mjs  hardening.test.mjs  multihost.test.mjs  restore.test.mjs  restoreContainer.test.mjs  setup.test.mjs  tasks.test.mjs  unit.test.mjs  version.test.mjs  write.test.mjs
proxmox-config/: config.example.json
src/clustr/: server.py
src/clustr/auth/: oauth.py
src/clustr/config/: settings.py
src/clustr/middleware/: host_verify.py
src/clustr/proxmox/: client.py
src/clustr/tools/: __init__.py
tests/: test_client_retry.py  test_config.py  test_delete_tokens.py  test_env_file.py  test_http_transport.py  test_tool_execution.py  test_tool_registry.py
(+33 files in other folders)
