[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clustr"
version = "0.1.0"
description = "Proxmox MCP server built to Anthropic directory standards"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ken", email = "ken@kensstack.com" }]
keywords = ["proxmox", "mcp", "claude", "infrastructure"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp[cli]>=1.6.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "proxmoxer>=2.0.1",
    "requests>=2.31.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
clustr = "clustr.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clustr"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
